# MCPT

./: CMakeLists.txt  main.cc  readme.md
scenes/bunny-box/: bunny-box.mtl  bunny-box.xml  test.ipynb
scenes/cornell-box/: cornell-box.xml
scenes/staircase/: staircase.xml
scenes/veach-mis/: veach-mis.xml
src/: aarect.h  box.h  bvh.h  contants.h  hittable.h  hittable_list.h  material.h  mesh.h  onb.h  pdf.h  scene.h  sphere.h  tiny_obj_loader.h  triangle.h
src/common/: aabb.h  camera.h  color.h  perlin.h  ray.h  rtw_stb_image.h  rtweekend.h  texture.h  vec3.h
